Plugin Name: CoursePress Pro
Author: Marko Miljus ( Incsub ) / Rheinard Korf ( Incsub )

CHANGE LOG
=================================================

== Changelog ==

= 1.0.8 = 
-------------------------------------------------
* Upgraded MarketPress Bundle to 2.9.5.3
* Added warning message (for admins) to the course overview page if "anyone can register" is not selected
* Resolved issue with instructor capabilities settings and saving
* Resolved possible issues with rewrite rules formating and avoid 404s
* Fixed issue with non-protected discussions for students who didn't enroll to the course

= 1.0.7 = 
-------------------------------------------------
* Resolved issues with wrong pre_get_posts filtering within the admin

= 1.0.6 = 
-------------------------------------------------
* Improved security
* Fixed: Auto-update issue with text editor in course setup  
* Slightly larger content editor for more convenient editing
* Fixed: Course completion now calculates correctly
* Resolved issue with incorrect saving of Single Line / Multiple Lines option in input text element
* Added student username (and link to the student's profile) in the assessment column
* Dynamic MarketPress path set

= 1.0.5 =
-------------------------------------------------
* Resolved issues with displaced content when PopUp Pro plugin is active
* Resolved issue with (not honoring) WP Settings for registrations
* CoursePress Theme CSS fixes
* Settings changes and Improved security  


= 1.0.4 =
-------------------------------------------------
* Shortcode changes and Improved security
* Fixed textdomain issues
* Resolved potential issue if Mcrypt library is not installed on server

= 1.0.3 =
-------------------------------------------------
* Improved security
* Resolved CSS issues with MarketPress popup called from CoursePress
* Fixed issue with theme location in the CoursePress theme
* Fixed CSS issue with uploaded videos in CoursePress theme (plus better responsive)