@@ -10,9 +10,10 @@ CHANGE LOG
 -------------------------------------------------
 * Upgraded MarketPress Bundle to 2.9.5.3
 * Added warning message (for admins) to the course overview page if "anyone can register" is not selected
-* Resolved issue with instructor capabilities settings and saving
-* Resolved possible issues with rewrite rules formating and avoid 404s
+* Fixed issue with instructor capabilities settings and saving
+* Fixes possible issues with rewrite rules formating and avoid 404s
 * Fixed issue with non-protected discussions for students who didn't enroll to the course
+* Fixed issue with visibility of the draft units for admins and instructors
 
 = 1.0.7 = 
 -------------------------------------------------
